# Git-Http-Server

./: Cargo.toml  README.md
git_repo/test-repo/info/: refs
git_repo/test-repo/refs/heads/: master
src/: handlers.rs  main.rs  models.rs  test.rs
src/handlers/: create_repo.rs  delete_repo.rs  get_repo_detail.rs  info_refs.rs  list_repos.rs  mod.rs  rpc.rs
test-local-repo/: README.md
