[package]
name = "git-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
futures = "0.3"
base64 = "0.21.0"
tempfile = "3.3.0"
regex = "1.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4.13"
serde = { version = "1.0.219", features = ["derive"] }
tokio-stream = "0.1.17"
serde_json = "1.0.143"
chrono = "0.4"
